feat: ttl for segments
