# internal/handler/user/init.go
@@ -25,4 +25,5 @@ func (h *Handler) Mount(r *mux.Router) {
 	userRouter := r.PathPrefix("/user").Subrouter()
 	userRouter.HandleFunc("/{id}/segment", h.updateUserSegments).Methods("PUT")
 	userRouter.HandleFunc("/{id}/segment", h.getUserSegments).Methods("GET")
+	userRouter.HandleFunc("/{id}/segment/ttl", h.joinSegmentsWithTTL).Methods("POST")
 }
